cluster/apps/kyverno/policies/annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-annotations
  annotations:
    policies.kyverno.io/title: Ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      ingress custom annotations annotation based.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): "ipv4.${SECRET_DOMAIN}"
              +(external-dns/is-public): "true"
    - name: internal-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "false"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/whitelist-source-range): "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
    - name: cert-manager
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                cert-manager.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(cert-manager.io/cluster-issuer): letsencrypt-production
    - name: auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                auth.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/auth-url): |-
                https://auth.${SECRET_DOMAIN}/oauth2/auth
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://auth.${SECRET_DOMAIN}/oauth2/start
